[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/testing/test-mech/hud/Radar.gd" type="Script" id=1]
[ext_resource path="res://textures/hud/Mask.shader" type="Shader" id=2]
[ext_resource path="res://textures/hud/RadarMask.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/hud/NotoSansHUD.tres" type="DynamicFont" id=4]

[sub_resource type="ShaderMaterial" id=2]

shader = ExtResource( 2 )
shader_param/mask_texture = ExtResource( 3 )

[node name="Radar" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1350.0
margin_bottom = -650.0
script = ExtResource( 1 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 250, 250 )
transparent_bg = true
usage = 0
render_target_v_flip = true
gui_disable_input = true

[node name="Camera2D" type="Camera2D" parent="Viewport"]

[node name="Player" type="Position2D" parent="Viewport"]
editor/display_folded = true
light_mask = 3
position = Vector2( 125, 125 )

[node name="ViewconeL" type="Position2D" parent="Viewport/Player"]
rotation = -0.610865

[node name="Line2D" type="Line2D" parent="Viewport/Player/ViewconeL"]
points = PoolVector2Array( 0, 0, 0, -125 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 690121825

[node name="ViewconeR" type="Position2D" parent="Viewport/Player"]
rotation = 0.610865

[node name="Line2D" type="Line2D" parent="Viewport/Player/ViewconeR"]
points = PoolVector2Array( 0, 0, 0, -125 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 690121825

[node name="LegsFacing" type="Position2D" parent="Viewport/Player"]

[node name="Line2D" type="Line2D" parent="Viewport/Player/LegsFacing"]
points = PoolVector2Array( 0, 0, 0, -125 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 690121825

[node name="ViewCenter" type="Line2D" parent="Viewport/Player"]
points = PoolVector2Array( 0, 0, 0, -125 )
width = 1.0
default_color = Color( 1, 1, 1, 1 )
texture_mode = 256379136

[node name="Polygon2D" type="Polygon2D" parent="Viewport/Player/ViewCenter"]
position = Vector2( 0, -120 )
polygon = PoolVector2Array( 0, 0, 5, -5, -5, -5 )

[node name="Blips" type="Position2D" parent="Viewport"]
light_mask = 3
position = Vector2( 125, 125 )

[node name="TextureRect" type="TextureRect" parent="."]
material = SubResource( 2 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -125.0
margin_right = 125.0
margin_bottom = 125.0
__meta__ = {
"_edit_lock_": true
}

[node name="Radius" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -14.0
margin_right = 33.0
margin_bottom = 12.0
custom_fonts/font = ExtResource( 4 )
text = "R: 1.0km"

